--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/bc6ed1ad47.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/design.css" />
-    <link rel="stylesheet" type="text/css" href="css/animation.css" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/common.css")}}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/design.css")}}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/animation.css")}}" />
   </head>
   <body>
     <div class="wrap">
