--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/common.css")}}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/design.css")}}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path="/css/animation.css")}}" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{url_for('static', path="/img/favicon.ico")}}" />
+
   </head>
   <body>
     <div class="top_btn fix_btn"><i class="fas fa-arrow-up"></i></div>
